--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,7 +20,7 @@
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 30px 20px;
+            padding: -10px;
             margin-bottom: 25px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
@@ -28,11 +28,11 @@
         .hero-logo {
             max-width: 120px;
             height: auto;
-            margin-bottom: 10px;
+            margin-bottom: -20px;
         }
 
         .hero h1 {
-            margin: 0;
+            margin: 20px;
             font-size: 26px;
             letter-spacing: 1px;
         }
@@ -69,7 +69,7 @@
         .add-btn {
             padding: 10px 20px;
             font-size: 15px;
-            background-color: #3498db;
+            background-color: #009AD0;
             color: white;
             border: none;
             border-radius: 6px;
@@ -182,7 +182,7 @@
 <body>
 
     <div class="hero">
-        <img src="https://via.placeholder.com/150x50?text=LOGO" alt="PingWatch Logo" class="hero-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/%C5%9Ei%C5%9Fecam.png" alt="PingWatch Logo" class="hero-logo">
         <h1>PingWatch - Ağ İzleme Paneli</h1>
     </div>
 
