--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PingWatch</title>
+    <title>Sise PingWatch</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,28 +14,120 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            overflow-x: hidden;
         }
 
+        /* --- YÜKLEME EKRANI (SPLASH SCREEN) CSS --- */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #1a252f;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.5s ease, visibility 0.5s ease;
+        }
+
+        .loading-logo {
+            max-width: 250px;
+            animation: pulse 1.5s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(0.9);
+                opacity: 0.8;
+            }
+
+            50% {
+                transform: scale(1.1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(0.9);
+                opacity: 0.8;
+            }
+        }
+
+        /* --- NAVBAR CSS --- */
+        .navbar {
+            background-color: #1a252f;
+            padding: 15px 30px;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+
+        .navbar-brand {
+            color: white;
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            margin-right: 40px;
+            letter-spacing: 1px;
+            display: flex;
+            align-items: center;
+            gap: 12px; /* Logo ile yazı arasındaki boşluk */
+        }
+
+        .nav-logo {
+            height:50px; /* Navbar logosunun yüksekliği */
+            width: auto;
+            border-radius: 4px;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 10px;
+        }
+
+        .nav-link {
+            color: #bdc3c7;
+            text-decoration: none;
+            font-size: 15px;
+            padding: 8px 16px;
+            border-radius: 5px;
+            transition: all 0.3s;
+            font-weight: 500;
+        }
+
+            .nav-link.active {
+                background-color: #3498db;
+                color: white;
+            }
+
+            .nav-link:hover:not(.disabled) {
+                background-color: #2c3e50;
+                color: white;
+            }
+
+            .nav-link.disabled {
+                color: #7f8c8d;
+                cursor: not-allowed;
+                opacity: 0.5;
+                pointer-events: none;
+            }
+
+        /* --- İÇERİK VE KARTLAR CSS --- */
         .hero {
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: -10px;
+            padding: 30px 20px;
             margin-bottom: 25px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
-        .hero-logo {
-            max-width: 120px;
-            height: auto;
-            margin-bottom: -20px;
-        }
-
-        .hero h1 {
-            margin: 20px;
-            font-size: 26px;
-            letter-spacing: 1px;
-        }
+            .hero h1 {
+                margin: 0;
+                font-size: 26px;
+                letter-spacing: 1px;
+            }
 
         .main-content {
             flex: 1;
@@ -69,7 +161,7 @@
         .add-btn {
             padding: 10px 20px;
             font-size: 15px;
-            background-color: #009AD0;
+            background-color: #3498db;
             color: white;
             border: none;
             border-radius: 6px;
@@ -81,7 +173,6 @@
                 background-color: #2980b9;
             }
 
-      
         .dashboard {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
@@ -181,9 +272,24 @@
 </head>
 <body>
 
+    <div id="loading-screen">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/%C5%9Ei%C5%9Fecam.png" alt="Yükleniyor" class="loading-logo">
+    </div>
+
+    <nav class="navbar">
+        <a href="#" class="navbar-brand">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/%C5%9Ei%C5%9Fecam.png" alt="Logo" class="nav-logo">
+            SiseWatch
+        </a>
+        <div class="nav-links">
+            <a href="#" class="nav-link active">Anasayfa</a>
+            <a href="#" class="nav-link disabled">Sıcaklık İzleme</a>
+            <a href="#" class="nav-link disabled">Ayarlar</a>
+        </div>
+    </nav>
+
     <div class="hero">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/%C5%9Ei%C5%9Fecam.png" alt="PingWatch Logo" class="hero-logo">
-        <h1>PingWatch - Ağ İzleme Paneli</h1>
+        <h1>Ağ İzleme Paneli</h1>
     </div>
 
     <div class="main-content">
@@ -200,6 +306,17 @@
     </footer>
 
     <script>
+        // --- YÜKLEME EKRANI KONTROLÜ ---
+        window.addEventListener('load', () => {
+            // 2000 milisaniye (2 saniye) bekle, sonra gizle
+            setTimeout(() => {
+                const loader = document.getElementById('loading-screen');
+                loader.style.opacity = '0';
+                loader.style.visibility = 'hidden';
+            }, 2000);
+        });
+
+        // --- PING KONTROL İŞLEMLERİ ---
         const baseUrl = "/api/Ip";
 
         async function deleteIp(id) {
@@ -248,7 +365,6 @@
                 return;
             }
 
-            // Butonu geçici olarak devre dışı bırak
             const btn = document.querySelector('.add-btn');
             btn.disabled = true;
             btn.innerText = "Ekleniyor...";
@@ -275,17 +391,13 @@
             } catch (error) {
                 console.error("Ekleme hatası:", error);
             } finally {
-                // İşlem bitince butonu eski haline getir
                 btn.disabled = false;
                 btn.innerText = "Ekle";
             }
         }
 
-        // Sayfa ilk açıldığında verileri yükle
         loadIps();
-
-        // 15 saniyede bir tabloyu otomatik güncelle
-        setInterval(loadIps, 15000);
+        setInterval(loadIps, 30000);
     </script>
 </body>
 </html>
