--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -118,7 +118,7 @@
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 30px 20px;
+            padding: 10px 20px;
             margin-bottom: 25px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
@@ -254,7 +254,7 @@
             background-color: #2c3e50;
             color: #ecf0f1;
             text-align: center;
-            padding: 15px 0;
+            padding: 10px 0;
             margin-top: auto;
             font-size: 14px;
         }
@@ -294,7 +294,7 @@
 
     <div class="main-content">
         <div class="controls">
-            <input type="text" id="ipInput" placeholder="IP Adresi (Örn: 192.168.1.1)" />
+            <input type="text" id="ipInput" placeholder="IP Adresi Ekleyin." />
             <button class="add-btn" onclick="addIp()">Ekle</button>
         </div>
 
@@ -302,7 +302,7 @@
     </div>
 
     <footer>
-        <p>Geliştiren: <a href="https://github.com/ardaa24" target="_blank">ardaa24</a> | PingWatch © 2026</p>
+        <p>Geliştiren: <a href="https://github.com/ardaa24" target="_blank">Arda</a> | Sisecam PingWatch © 2026</p>
     </footer>
 
     <script>
@@ -341,7 +341,7 @@
                 data.forEach(ip => {
                     const isUp = ip.isUp;
                     const cardClass = isUp ? "up" : "down";
-                    const statusText = isUp ? "ONLİNE" : "OFFLİNE";
+                    const statusText = isUp ? "ONLINE" : "OFFLINE";
 
                     container.innerHTML += `
                             <div class="card ${cardClass}">
