--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="TR-tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -405,7 +405,7 @@
         }
 
         loadIps();
-        setInterval(loadIps, 30000);
+        setInterval(loadIps, 1000);
     </script>
 </body>
 </html>
