--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -297,9 +297,10 @@
             background-color: #2c3e50;
             color: #ecf0f1;
             text-align: center;
-            padding: 15px 0;
+            padding: 5px 0;
             margin-top: auto;
             font-size: 14px;
+            font-style: oblique;
         }
 
             footer a {
@@ -372,7 +373,8 @@
 
         async function loadIps() {
             try {
-                const response = await fetch(baseUrl);
+                // cache: 'no-store' parametresi ile tarayıcının tembellik yapıp eski veriyi göstermesini engelle
+                const response = await fetch(baseUrl, { cache: "no-store" });
                 allData = await response.json();
                 renderCards();
             } catch (error) {
