--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -113,19 +113,20 @@
                 pointer-events: none;
             }
 
-        /* --- HERO VE İSTATİSTİKLER (Küçültüldü) --- */
+        /* --- HERO VE İSTATİSTİKLER --- */
         .hero {
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 10px 20px;
+            padding: 10px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
             .hero h1 {
                 margin: 0 0 10px 0;
-                font-size: 24px; 
+                font-size: 20px; 
                 letter-spacing: 1px;
+                margin-bottom:15px;
             }
 
         .stats-container {
@@ -456,5 +457,6 @@
         loadIps();
         setInterval(loadIps, 30000);
     </script>
+    <!--Arda24-->
 </body>
 </html>
